--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "An FCC Backend Challenge",
   "main": "./src/api.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node index.js"
   },
   "dependencies": {
     "cors": "^2.8.0",
