--- a/vercel.json
+++ b/vercel.json
@@ -2,8 +2,8 @@
 	"version": 2,
 	"builds": [
 		{
-			"src": "./package.json",
-			"use": "now-sapper"
+			"src": "./index.js",
+			"use": "@vercel/node"
 		}
 	],
 	"routes": [
