--- a/package.json
+++ b/package.json
@@ -2,16 +2,14 @@
   "name": "fcc-api-projects-boilerplate",
   "version": "0.0.1",
   "description": "An FCC Backend Challenge",
-  "main": "./src/api.js",
+  "main": "index.js.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js.js"
   },
   "dependencies": {
     "cors": "^2.8.0",
     "dotenv": "^10.0.0",
-    "express": "^4.12.4",
-    "netlify-lambda": "^2.0.14",
-    "serverless-http": "^2.7.0"
+    "express": "^4.12.4"
   },
   "repository": {
     "type": "git",
@@ -24,5 +22,6 @@
     "freecodecamp"
   ],
   "license": "MIT",
+  "devDependencies": {},
   "author": ""
 }
