--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "fcc-api-projects-boilerplate",
   "version": "0.0.1",
   "description": "An FCC Backend Challenge",
-  "main": "index.js.js",
+  "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
