--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.ts",
+    "build": "tsc -p ."
   },
   "dependencies": {
+    "@types/node": "^16.11.6",
     "cors": "^2.8.0",
     "dotenv": "^10.0.0",
-    "express": "^4.12.4"
+    "express": "^4.12.4",
+    "typescript": "^4.4.4"
   },
   "repository": {
     "type": "git",
@@ -23,6 +26,8 @@
     "freecodecamp"
   ],
   "license": "MIT",
-  "devDependencies": {},
+  "devDependencies": {
+    "ts-node": "^10.4.0"
+  },
   "author": ""
 }
