--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "@types/node": "^16.11.6",
+    "connect-livereload": "^0.6.1",
     "cors": "^2.8.0",
     "dotenv": "^10.0.0",
     "express": "^4.12.4",
+    "livereload": "^0.9.3",
+    "path": "^0.12.7",
     "typescript": "^4.4.4"
   },
   "repository": {
