--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "An FCC Backend Challenge",
   "main": "index.js",
   "scripts": {
+    "start": "node index.ts",
     "dev": "nodemon index.ts",
     "build": "tsc -p ."
   },
