--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "An FCC Backend Challenge",
   "main": "index.js",
   "scripts": {
-    "start": "node index.ts",
+    "start": "nodemon index.ts",
     "dev": "nodemon index.ts",
     "build": "tsc -p ."
   },
@@ -30,6 +30,7 @@
   ],
   "license": "MIT",
   "devDependencies": {
+    "nodemon": "^2.0.14",
     "ts-node": "^10.4.0"
   },
   "author": ""
